// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PopoverListMembers should match snapshot 1`] = `
<div
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="channelMembersTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <MemberIcon
          aria-hidden="true"
          className="icon icon--standard"
          id="channelMemberIcon"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <FormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex="-1"
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="online"
            user={
              Object {
                "id": "member_id_1",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="offline"
            user={
              Object {
                "id": "member_id_2",
              }
            }
          />
        </div>
      </div>
    </Popover>
  </Overlay>
</div>
`;

exports[`components/PopoverListMembers should match snapshot with archived channel 1`] = `
<div
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="channelMembersTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <MemberIcon
          aria-hidden="true"
          className="icon icon--standard"
          id="channelMemberIcon"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <FormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex="-1"
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="online"
            user={
              Object {
                "id": "member_id_1",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="offline"
            user={
              Object {
                "id": "member_id_2",
              }
            }
          />
        </div>
      </div>
    </Popover>
  </Overlay>
</div>
`;

exports[`components/PopoverListMembers should match snapshot with group-constrained channel 1`] = `
<div
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="channelMembersTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <MemberIcon
          aria-hidden="true"
          className="icon icon--standard"
          id="channelMemberIcon"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <FormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
        <div
          className="subhead"
        >
          <FormattedMessage
            defaultMessage="Members managed by linked groups."
            id="channel_header.groupConstrained"
          />
        </div>
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex="-1"
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="online"
            user={
              Object {
                "id": "member_id_1",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={true}
            status="offline"
            user={
              Object {
                "id": "member_id_2",
              }
            }
          />
        </div>
      </div>
    </Popover>
  </Overlay>
</div>
`;
